[package]
name = "agentsearch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
glob = "0.3.3"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
shellexpand = "3.1.2"
tantivy = "0.26.0"
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.23.0"
